<resources>
    <string name="app_name">Inferno_Dog_Care_App</string>
    <string name="bmi_toolbar_name">BMI CALCULATOR</string>
    <string name="bmi_txt1">Dog Name</string>
    <string name="bmi_txt2">Gender</string>
    <string name="bmi_txt3">Breed</string>
    <string name="bmi_txt4">Weight (kg)</string>
    <string name="bmi_txt5">Height (cm)</string>
    <string name="bmi_edit1">Selly</string>
    <string name="bmi_edit2">Labrador</string>
    <string name="bmi_edit3">40</string>
    <string name="bmi_edit4">65</string>
    <string name="bmi_btn1">Calculate BMI</string>
    <string name="bmi_ans">94.67</string>
    <string name="channel_choose_toolbar_name">Channel Your Veterinarian</string>
    <string name="channel_choose_view">Make An Appointment</string>
    <string name="channel_choose_viewapp">View Appointments</string>
    <string name="txt_login">Login</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_channel">Channel Vet</string>
    <string name="txt_walkyourdog">Walk Your Dog</string>
    <string name="txt_bmicalculator">BMI Calculator</string>
    <string name="txt_foodcaories">Food Calories</string>
    <string name="txt_adopt">Adopt Dog</string>
    <string name="txt_buydog">Buy A Dog</string>
    <string name="txt_selldog">Sell A Dog</string>
    <string name="appointment_details_toolbar_name">Channel Your Veterinarian</string>
    <string name="txt_appointmentetils"><u>Appointment Details</u></string>
    <string name="txt_doctorname">Doctors Name</string>
    <string name="txt_channelingfee">Channeling Fee</string>
    <string name="txt_date">Date</string>
    <string name="txt_doctorname2">: Dr. Mishan Kavindu</string>
    <string name="txt_channelingfee2">: Rs. 500.00</string>
    <string name="txt_date2">: 18/08/2021</string>
    <string name="txt_dogownerdetails"><u>Dog Owner Details</u></string>
    <string name="txt_ownername">Name</string>
    <string name="txt_ownername2">: Saman Soysa</string>
    <string name="txt_ownerphone">Phone</string>
    <string name="txt_ownerphone2">: 076 9349192</string>
    <string name="btn_details_payment">Payment</string>
    <string name="btn_details_update">Update</string>
    <string name="btn_details_delete">Delete</string>
    <string name="txt_confirmmsg">Appointment Scheduled !</string>
    <string name="payment_toolbar_name">Channel Your Veterinarian</string>
    <string name="paymentedit_cardno">XXXX XXXX XXXX XXXX</string>
    <string name="paymentedit_name">Name</string>
    <string name="paymentedit_cvv">CVV</string>
    <string name="paymentedit_expire">mm/yy</string>
    <string name="paymentedit_amount">Amount</string>
    <string name="txt_cardno">Card No</string>
    <string name="txt_name">Name</string>
    <string name="txt_cvv">CVV</string>
    <string name="txt_expire">Card Expiry</string>
    <string name="txt_amount">Amount (Rs)</string>
    <string name="btn_payment">MAKE PAYMENT</string>
    <string name="txt_topic">Payment Details</string>
    <string name="bmi_edit">Gender</string>
    <string name="vet_details_toolbar_name">Channel Your Veterinarian</string>
    <string name="vet_details_txt1">You can channel your trusted veterinarian through our app easily. All the veterinarians are qualified and very experienced. Doctors are available everyday from 4.00 p.m. to 10.00 a.m.</string>
    <string name="channel_toolbar_name">Channel Your Veterinarian</string>
    <string name="channel_name">Name</string>
    <string name="channel_txt_name">Name</string>
    <string name="channel_txt_date">Date</string>
    <string name="channel_txt_phone">Phone</string>
    <string name="channel_date">Date</string>
    <string name="channel_phone">Phone</string>
    <string name="channel_btn_hold">HOLD</string>
    <string name="channel_btn_payment">PAYMENT</string>
    <string name="txt_channel_dis_name">Dr .Mishan Kavindu</string>
    <string name="txt_channel_dis_deg">BVCs (Hons) Dip. Tox</string>
    <string name="txt_channel_dis_reg">Registered vet surgeon 1234</string>
    <string name="txt_channel_dis_details">No.12 , Gonawala Road, Kelaniya.  076 2458695 mishk@gmail.com Channeling Fee : Rs. 500.00 "</string>
    <string name="sell_toolbar_name">Sell Your Pet</string>
    <string name="sell_breed">Breed</string>
    <string name="sell_no">No of Puppies</string>
    <string name="sell_dob">Birthday</string>
    <string name="sell_add">Address</string>
    <string name="sell_img">Add Image</string>
    <string name="sell_edit1">Kasun Kalhara</string>
    <string name="sell_edit2">0769349192</string>
    <string name="sell_edit3">No 23, Mathara</string>
    <string name="sell_btn">SUBMIT</string>
    <string name="buypet_toolbar_name">Buy Your Pet</string>
    <string name="buypet_txt1">Raising a dog is a best hobby for you. Having a dog reduce your stress and depression.
        So buy your puppy today!</string>
    <string name="sell_name">Owner Name</string>
    <string name="sell_phone">Phone No</string>
    <string name="sell_price">Price (Rs)</string>
    <string name="sell_edit4">Labrador</string>
    <string name="sell_edit5">08</string>
    <string name="sell_edit6">12/12/2018</string>
    <string name="sell_edit7">40000</string>
    <string name="vsell_txt1">Your Details</string>
    <string name="vsell_txt5">Pet Details</string>
    <string name="vsell_update">UPDATE</string>
    <string name="vsell_delete">DELETE</string>
    <string name="buyprof_txt1">Labrador Puppies</string>
    <string name="main_selltxt1">Add Advertisement</string>
    <string name="main_selltxt2">View Advertisement</string>
    <string name="buyprof_txt2">Owner Details</string>
    <string name="buyprof_txt3">Name</string>
    <string name="buyprof_txt4">Contact No</string>
    <string name="walk_dog_toolbar">Walk Your Dog</string>
    <string name="walk_dogtxt1">Calorie Burner Calculator</string>
    <string name="walk_dogtxt2">Weight (kg)</string>
    <string name="walk_dogtxt3">Walk your dog everyday to ensure your dogs health and happiness.</string>
    <string name="walk_dogtxt4">Your dog burned</string>
    <string name="walk_dogedit1">10</string>
    <string name="walk_dogbtn1">START</string>
    <string name="walk_dogbtn2">STOP</string>
    <string name="walk_dogbtn3">RESET</string>
    <string name="walk_dogbtn4">Burned Calories</string>
    <string name="walk_dogtxt5">Calories</string>
    <string name="walk_dogedit3">94.67</string>
    <string name="vet_reg">Veterinarian Registration</string>
    <string name="vet_next">Next</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="vet_reg2">Veterinarian Registration</string>
    <string name="prof_info">Professional Information</string>
    <string name="reg_no">BVSc Registration No</string>
    <string name="reg_year">Year of Registration</string>
    <string name="specification">Specification</string>
    <string name="description">Description</string>
    <string name="appointments">Appointments</string>
    <string name="y_appointment">Your Appointments</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="c1_n">Ada Lovelace</string>
    <string name="c2_n">Grace Hopper</string>
    <string name="c3_n">Margaret Hamilton</string>
    <string name="c4_n">Joan Clarke</string>
    <string name="c2_d">24/08/2021</string>
    <string name="c1_d">23/08/2021</string>
    <string name="c3_d">26/08/2021</string>
    <string name="c4_d">29/08/2021</string>
    <string name="calc_income">Calculate Channelling Income</string>
    <string name="income">Income :</string>
    <string name="vet_profile">Veterinarian Profile</string>
    <string name="doc_name">DR. MISHAN KAVINDU</string>
    <string name="doc_description">BVSc (Hons) Dip. Tox</string>
    <string name="doc_description2">Registered Vet. Surgeon 1234</string>
    <string name="detail1">Male</string>
    <string name="detail2">No12, Gonawala Road, Kelaniya</string>
    <string name="detail3">076-2458695</string>
    <string name="detail4">mishank@gmail.com</string>
    <string name="vet_app_b">Appointments</string>
    <string name="vet_up_b">Update Account</string>
    <string name="vet_del_b">Delete Account</string>
    <string name="c_account">Create Account</string>
    <string name="vet_loging">Veterinarian Login</string>
    <string name="txt_welcome">Welcome Back !</string>
    <string name="txt_password">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="btn_login">LOGIN</string>
    <string name="txt_haveanaccount">Do you have an account ?</string>
    <string name="txt_signup">SIGN UP</string>
    <string name="txt_email">Email</string>
    <string name="txt_signin">Do you have an account ?</string>
    <string name="txt_btnsign">SIGN UP</string>
    <string name="login_toolbar_name">Login</string>
    <string name="user_reg_toolbar_name">User Registration</string>
    <string name="txt_letsgetstarted">Let\'s Get Started..</string>
    <string name="btn_user_reg">NEXT</string>
    <string name="user_reg_dog_toolbar_name">User Registration</string>
    <string name="txt_user_reg_dog">Your Dog</string>
    <string name="txt_fname">First Name</string>
    <string name="txt_lname">Last Name</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_email2">Email</string>
    <string name="txt_password2">Password</string>
    <string name="txt_dogname">Name</string>
    <string name="txt_doggender">Gender</string>
    <string name="txt_dogbreed">Breed</string>
    <string name="txt_dogbday">Birth Day</string>
    <string name="txt_dogcolor">Color</string>
    <string name="btn_skip">SKIP</string>
    <string name="btn_create_account">Create Account</string>
    <string name="user_login_toolbar_name">User Login</string>
    <string name="txt_vet_login">Veterinarian</string>
    <string name="txt_user_login">User</string>
    <string name="user_profile_toolbar_name">User Profile</string>
    <string name="txt_userprofile_name">Name : Manuka Dahanayake</string>
    <string name="txt_userprofile_gender">Gender : Male</string>
    <string name="txt_userprofile_phone">Phone : 071 1234569</string>
    <string name="txt_userprofile_email">Email : manuka@gmail.com</string>
    <string name="txt_userprofile_dogname">Name : Selly</string>
    <string name="txt_userprofile_dogbreed">Breed : Labrador Retriever</string>
    <string name="txt_userprofile_doggender">Gender : Female</string>
    <string name="txt_userprofile_dogbday">Birth Day : 12/12/18</string>
    <string name="txt_userprofile_dogcolor">Color : White</string>
    <string name="btn_userprofile_update">UPDATE ACCOUNT</string>
    <string name="btn_userprofile_delete">DELETE ACCOUNT</string>
    <string name="txt_user_password">Password</string>
    <string name="btn_user_login">LOGIN</string>
    <string name="food_calories_toolbar">Food Calories</string>
    <string name="checkbox_food_calories1">Meat</string>
    <string name="checkbox_food_calories2">Rice</string>
    <string name="checkbox_food_calories3">Fish</string>
    <string name="checkbox_food_calories4">Egg</string>
    <string name="checkbox_food_calories5">Milk</string>
    <string name="checkbox_food_calories6">Yoghurt</string>
    <string name="txt_food_calories4">grams</string>
    <string name="txt_food_calories5">grams</string>
    <string name="txt_food_calories6">grams</string>
    <string name="txt_food_calories7">quantity</string>
    <string name="txt_food_calories8">mililiters</string>
    <string name="txt_food_calories9">quantity</string>
    <string name="btn_food_calories">CALCULATE</string>
</resources>